GNOME Bugzilla – Bug 587716
GtkInfoBar broken on resize
Last modified: 2009-07-06 05:57:24 UTC
Happens when you resize the "Info Bars" window in gtk-demo. This is with latest git master, last commit is commit 6b56aea518226c27411414176527667472a3c936 Author: Matthias Clasen <mclasen@redhat.com> Date: Fri Jul 3 15:21:50 2009 -0400 Add another bug ref I'll attach a screenshot.
Created attachment 137814 [details] screenshot
Matthias: might this be related to that Palimpsest problem I mentioned earlier?
I get this with pre-csw gtk+ too. I'm attaching a patch that "mostly" fixes it. However, even with that patch there seem to be an off-by-one redrawing error on the leftmost pixel row when resizing the window.
Created attachment 137842 [details] [review] Make GtkInfoBar repaint on resize.
eh, rightmost pixel row obviously
Thanks, committed with an additional fix for the off-by-one issue.