search-bar: set redraw_on_allocate(), like GtkInfoBar does

This fixes artifacts while resizing. A similar patch was committed to
GtkInfoBar in https://bugzilla.gnome.org/show_bug.cgi?id=587716.

https://bugzilla.gnome.org/show_bug.cgi?id=647013